Fix logo too wide in about page

--- a/src/css/about.scss
+++ b/src/css/about.scss
@@ -63,6 +63,7 @@
 .about-logo {
   display: block;
   height: 64pt;
+  max-width: 64pt;
   margin-left: auto;
   margin-right: auto;
   //filter: drop-shadow(0 0 3px $site-logo-shadow);
